added new features

--- a/views/admin/addFeature.ejs
+++ b/views/admin/addFeature.ejs
@@ -94,13 +94,13 @@ input, textarea {
                     <label for="eventAbout">Event About:</label>
                     <textarea name="eventAbout[]"></textarea>
 
-                    <label for="eventLink">Link 1:</label>
+                    <label for="eventLink">XR Links</label>
                     <textarea name="Link1[]"></textarea>
 
-                    <label for="eventLink">Link 2:</label>
+                    <label for="eventLink">Photos links</label>
                     <textarea name="Link2[]"></textarea>
 
-                    <label for="eventLink">Link 3:</label>
+                    <label for="eventLink">Videos Links</label>
                     <textarea name="Link3[]"></textarea>
                   </div>
                 </div>
