--- a/views/admin/addtodo.ejs
+++ b/views/admin/addtodo.ejs
@@ -109,7 +109,7 @@ li:hover {
       <% } %>
     </ul>
   <% } %>
-  <button onclick="addFeature()">Add New Feature</button>
+  <button><a href="/admin/addfeature/<%= stateId %>" >Add New Feature</a></button>
 <!-- Add Swal library -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
